Big Update, polling is now done in a separate thread so the UI isn't blocked, more resource, app responds to changes in build status. Errors are displayed in 2nd tab

--- a/AppHarbor.Lookout/AppHarbor.Lookout.csproj
+++ b/AppHarbor.Lookout/AppHarbor.Lookout.csproj
@@ -49,16 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
+    <Compile Include="AppHarborForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="AppHarborForm.Designer.cs">
+      <DependentUpon>AppHarborForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="AppHarborForm.resx">
+      <DependentUpon>AppHarborForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -88,9 +88,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\RedIcon.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\RedButton.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\OrangeButton.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GrayButton.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
