--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
-# Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
-bin
-obj
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
 
-# mstest test results
-TestResults
-#ignore thumbnails created by windows
-Thumbs.db
-#Ignore files build by Visual Studio
-*.obj
-*.exe
-*.pdb
+#Visual Studio files
+*.[Oo]bj
 *.user
 *.aps
 *.pch
 *.vspscc
+*.vssscc
 *_i.c
 *_p.c
 *.ncb
@@ -21,17 +16,49 @@ Thumbs.db
 *.tlb
 *.tlh
 *.bak
-*.cache
+*.[Cc]ache
 *.ilk
 *.log
-[Bb]in
-[Dd]ebug*/
 *.lib
 *.sbr
+*.sdf
+*.opensdf
+*.unsuccessfulbuild
+ipch/
 obj/
+[Bb]in
+[Dd]ebug*/
 [Rr]elease*/
+Ankh.NoLoad
+
+#MonoDevelop
+*.pidb
+*.userprefs
+
+#Tooling
 _ReSharper*/
-Download
+*.resharper
 [Tt]est[Rr]esult*
-packages
-![Nn]u[Gg]et.exe
+*.sass-cache
+
+#Project files
+[Bb]uild/
+
+#Subversion files
+.svn
+
+# Office Temp Files
+~$*
+
+#NuGet
+packages/
+
+#ncrunch
+*ncrunch*
+*crunch*.local.xml
+
+# visual studio database projects
+*.dbmdl
+
+#Test files
+*.testsettings
