--- a/AppHarbor.Lookout/app.config
+++ b/AppHarbor.Lookout/app.config
@@ -5,6 +5,9 @@
             <section name="AppHarborLookout.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+	<appSettings>
+		<add key="ListenPort" value="85"></add>
+	</appSettings>
     <userSettings>
         <AppHarborLookout.Properties.Settings>
             <setting name="AccessToken" serializeAs="String">
