--- a/AppHarbor.Lookout/app.config
+++ b/AppHarbor.Lookout/app.config
@@ -6,7 +6,9 @@
         </sectionGroup>
     </configSections>
 	<appSettings>
-		<add key="ListenPort" value="85"></add>
+		<add key="ListenPort" value="85" />
+		<add key="ClientId" value="0b2b327d-3ca1-493c-a6b1-5fce5b0f376c"/>
+		<add key="ClientSecret" value="61026cc0-7bf3-4baf-8833-db4f42a59246"/>
 	</appSettings>
     <userSettings>
         <AppHarborLookout.Properties.Settings>
