--- a/AppHarbor.Lookout/AppHarbor.Lookout.csproj
+++ b/AppHarbor.Lookout/AppHarbor.Lookout.csproj
@@ -58,6 +58,7 @@
     </Compile>
     <Compile Include="BuildInfo.cs" />
     <Compile Include="BuildStatusInterpreter.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BuildProcessor.cs" />
